[package]
name = "larch"
version = "0.1.0"
edition = "2024"
description = "Hierarchical kmeans clustering seeding algorithm"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/noahcape/larch" 
keywords = ["agglomerative clustering", "clustering", "kmeans", "hierarchical clustering"]
categories = ["clustering"]
exclude = [
    "./examples/*",
]

[dependencies]
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
plotters = "0.3.3"
serde = {version="1.0.228",features = ["derive"]}
csv = "1.3.1"